--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -15,14 +15,23 @@ body {
 
 header {
     background-color: darkslategrey;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 .logo {
     width: 80px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a {
@@ -37,8 +46,26 @@ nav a:hover {
     color: #F48C06;
 }
 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
 #hero-img {
     width: 100%;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
 }
 
 #hero-msg h1 {
@@ -46,7 +73,7 @@ nav a:hover {
 }
 
 .home-title {
-    color: #370617;
+    color: #F48C06;
     font-family: Birthstone, Helvetica, sans-serif;
     font-size: 2em;
     margin-top: 10px;
@@ -54,6 +81,7 @@ nav a:hover {
 
 #hero-msg h4 {
     text-align: center;
+    color: white;
 }
 
 .button-box {
@@ -75,6 +103,11 @@ nav a:hover {
     color: #370617;
 }
 
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
 main section {
     text-align: center;
 }
@@ -89,6 +122,32 @@ main section img {
 
 .card-img {
     border: 10px solid #370617;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px black;
+}
+
+.card img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.card-img, .mountain {
+    width: 100%;
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 
 .icon {
@@ -97,14 +156,25 @@ main section img {
 }
 
 #background {
-    height: 125px;
+    height: 675px;
     background-color: dimgrey;
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px black;
 }
 
 .msg {
     background-color: #370617;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px black;
 }
 
 .msg h2 {
@@ -130,6 +200,9 @@ footer {
     background-color: darkslategrey;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer h3 {
@@ -149,4 +222,46 @@ footer a:hover {
 
 footer.social img {
     padding-top: 15px;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
