--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -126,7 +126,7 @@ main section img {
     box-shadow: 5px 5px 10px black;
 }
 
-.card img:hover {
+.card-img:hover {
     opacity: .6; 
     transform: scale(1.1);
 }
