social meda commit

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -224,6 +224,10 @@ footer.social img {
     padding-top: 15px;
 }
 
+#social:hover {
+    text-decoration: none;
+}
+
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
